--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -11,19 +11,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
-        android:id="@+id/worm_dots_indicator"
+    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+        android:id="@+id/dots_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        app:dotsColor="@color/purple_500"
+        app:dotsColor="@color/black"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:dotsCornerRadius="8dp"
         app:dotsSize="16dp"
         app:dotsSpacing="4dp"
-        app:dotsStrokeColor="@color/black"
-        app:dotsStrokeWidth="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:dotsWidthFactor="2.5"
+        app:selectedDotColor="@color/teal_200"
+        app:progressMode="true"/>
+
+    <TextView
+        android:id="@+id/buttonSkip"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="26dp"
+        android:text="Skip"
+        android:textColor="@color/black"
+        android:textSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
